<resources>
    <!--Title activities-->
    <string name="app_name" translatable="false">Atrapacor</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main_game">Find The Color</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_how_play">How to play</string>
    <string name="title_activity_main_scores">Your score</string>
    <string name="title_activity_main_all_scores">Scores</string>
    <string name="title_activity_main_records">Achievements</string>
    <string name="title_activity_game">game</string>

    <!--menus-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="records">Achievements</string>
    <string name="tools">Tools</string>
    <string name="singout">Exit</string>
    <string name="share">Share</string>
    <string name="contactwithmy">Contact me</string>

    <!-- scores-->
    <string name="theBest">THE BEST:</string>
    <string name="theLast">SCORE:</string>
    <string name="closeGameReplayDialog">Close game</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">User Name</string>
    <string name="rememberMe_label">Remember me</string>
    <string name="loading">Loading..</string>
    <string name="error_invalid_userName">This field is required to sign in</string>

    <string name="large_text">"Material is the metaphor.\n\n"</string>

    <!--Dialog-->
    <string name="gameOver">Game Over</string>
    <string name="restart_game">Restart the game?</string>
    <string name="newGameButton">New Game</string>
    <string name="buttonCancel">Cancel</string>
    <string name="menssage_restartGame">Your current score will not be saved</string>
    <string name="average">AVERAGE SUCCESS:</string>
    <string name="buttonAccept">Accept</string>


    <string name="mole">Mole</string>
    <string name="fox">Fox</string>
    <string name="predator">Predator</string>
    <string name="feline">Feline</string>
    <string name="lynx">Lynx</string>
    <string name="prey">Bird of prey</string>
    <string name="eagle">Eagle</string>
    <string name="tenPoints">Your first 10 points.</string>
    <string name="unLevel2">Unlock level 2.</string>
    <string name="unLevel3">Unlock level 3.</string>
    <string name="des_mole">You have a view of the mole, you\'ve not earned more than 50 points.</string>
    <string name="des_fox">Well done, you\'re almost there.</string>
    <string name="des_predator">Level two is very close!</string>
    <string name="des_feline">Good score!</string>
    <string name="des_lynx">You have good eyesight!</string>
    <string name="des_prey">Amazing,it\'s not easy to do that!</string>
    <string name="des_eagle">Few people can do that !</string>
    <string name="des_tenPoints">You\'ve reached ten points.</string>
    <string name="des_unLevel2">You can start the second level.</string>
    <string name="des_unLevel3">You can start the third level.</string>

    <string name="whitoutnet">Sin conexion a internet</string>
    <string name="today">Today</string>
    <string name="comingsoon">coming soon</string>
    <string name="yesterday">Yesterday</string>
    <string name="Level_title">"Level "</string>
    <string name="scores_title">" Scores"</string>
    <string name="msg_unlock_level">You need unlock this level</string>
    <string name="levelTwoDot">Level:</string>
    <string name="clickagain">Click again to finish.</string>
    <string name="title_activity_proba_login">ProbaLogin</string>


    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <string name="app_id">ReplaceMe</string>
</resources>
