<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">
    <!-- PUNTUACION ACTUAL -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/theLast" />

    <TextView
        android:id="@+id/puntuacionDialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:textSize="22dp" />
    <!-- LA MEJOR PUNTUACION -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/theBest" />

    <TextView
        android:id="@+id/mejorDialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:textSize="22dp" />
    <!-- MEDIA DE ACCIETOS -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/average" />

    <TextView
        android:id="@+id/aciertosDialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:textSize="22dp" />

</LinearLayout>